# chord

./: BUILD.bazel  README.rst  WORKSPACE  deps.bzl  go.mod
cmd/join/: BUILD.bazel
cmd/leave/: BUILD.bazel
cmd/serve/: BUILD.bazel  main.go
pkg/: BUILD.bazel  hash.go  node.go  table.go
pkg/v1/: BUILD.bazel  service.go
proto/v1/: BUILD.bazel  chord.proto
