load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "leave_lib",
    srcs = ["main.go"],
    importpath = "chord/cmd/leave",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "leave",
    embed = [":leave_lib"],
    visibility = ["//visibility:public"],
)
