load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "serve_lib",
    srcs = ["main.go"],
    importpath = "chord/cmd/serve",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg",
        "//pkg/v1:pkg",
        "//proto/v1:proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "serve",
    embed = [":serve_lib"],
    visibility = ["//visibility:public"],
)
